Ensure the banner wraps properly on mobile

--- a/src/templates/emailHtmlDocument/completeEmail.css
+++ b/src/templates/emailHtmlDocument/completeEmail.css
@@ -18,7 +18,9 @@ td.wide {
     padding-left: 50px;
     padding-right: 50px;
   }
+}
 
+@media screen and (max-width: 414px) {
   .banner-link-container {
     display: inline-block;
   }
